python_project/grammar/RSSParser.py
# Generated from C:/Users/anbra/Desktop/UTN/2doNivel/Sintaxis y Semántica de los Lenguajes/RSSParser/RSSParser/python_project/grammar\RSSParser.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RSSParser ( Parser ):

    grammarFileName = "RSSParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'<?xml'", "'?>'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "WS", "URL", "INT", "TXT", 
                      "O_RSS", "O_CHANNEL", "O_IMG", "O_ITEM", "O_TITLE", 
                      "O_DESC", "O_LINK", "O_CATEG", "O_COPYR", "O_URL", 
                      "O_HEIGHT", "O_WIDTH", "C_RSS", "C_CHANNEL", "C_IMG", 
                      "C_ITEM", "C_TITLE", "C_DESC", "C_LINK", "C_CATEG", 
                      "C_COPYR", "C_URL", "C_HEIGHT", "C_WIDTH", "RSS_VERSION", 
                      "OPEN_XML", "CLOSE_XML", "XML_WS", "ATT_VERSION", 
                      "ATT_ENCODING", "XML_VERSION", "XML_ENCODING" ]

    RULE_document = 0
    RULE_xml = 1
    RULE_xml_version = 2
    RULE_xml_encoding = 3
    RULE_rss = 4
    RULE_channel = 5
    RULE_img = 6
    RULE_item = 7
    RULE_in_item = 8
    RULE_title = 9
    RULE_desc = 10
    RULE_link = 11
    RULE_categ = 12
    RULE_copyr = 13
    RULE_url = 14
    RULE_height = 15
    RULE_width = 16
    RULE_txt = 17

    ruleNames =  [ "document", "xml", "xml_version", "xml_encoding", "rss", 
                   "channel", "img", "item", "in_item", "title", "desc", 
                   "link", "categ", "copyr", "url", "height", "width", "txt" ]

    EOF = Token.EOF
    COMMENT=1
    WS=2
    URL=3
    INT=4
    TXT=5
    O_RSS=6
    O_CHANNEL=7
    O_IMG=8
    O_ITEM=9
    O_TITLE=10
    O_DESC=11
    O_LINK=12
    O_CATEG=13
    O_COPYR=14
    O_URL=15
    O_HEIGHT=16
    O_WIDTH=17
    C_RSS=18
    C_CHANNEL=19
    C_IMG=20
    C_ITEM=21
    C_TITLE=22
    C_DESC=23
    C_LINK=24
    C_CATEG=25
    C_COPYR=26
    C_URL=27
    C_HEIGHT=28
    C_WIDTH=29
    RSS_VERSION=30
    OPEN_XML=31
    CLOSE_XML=32
    XML_WS=33
    ATT_VERSION=34
    ATT_ENCODING=35
    XML_VERSION=36
    XML_ENCODING=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def xml(self):
            return self.getTypedRuleContext(RSSParser.XmlContext,0)


        def rss(self):
            return self.getTypedRuleContext(RSSParser.RssContext,0)


        def EOF(self):
            return self.getToken(RSSParser.EOF, 0)

        def getRuleIndex(self):
            return RSSParser.RULE_document

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = RSSParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.xml()
            self.state = 37
            self.rss()
            self.state = 38
            self.match(RSSParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class XmlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_XML(self):
            return self.getToken(RSSParser.OPEN_XML, 0)

        def xml_version(self):
            return self.getTypedRuleContext(RSSParser.Xml_versionContext,0)


        def CLOSE_XML(self):
            return self.getToken(RSSParser.CLOSE_XML, 0)

        def xml_encoding(self):
            return self.getTypedRuleContext(RSSParser.Xml_encodingContext,0)


        def getRuleIndex(self):
            return RSSParser.RULE_xml

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitXml" ):
                return visitor.visitXml(self)
            else:
                return visitor.visitChildren(self)




    def xml(self):

        localctx = RSSParser.XmlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_xml)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(RSSParser.OPEN_XML)
            self.state = 41
            self.xml_version()
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RSSParser.ATT_ENCODING:
                self.state = 42
                self.xml_encoding()


            self.state = 45
            self.match(RSSParser.CLOSE_XML)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Xml_versionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATT_VERSION(self):
            return self.getToken(RSSParser.ATT_VERSION, 0)

        def XML_VERSION(self):
            return self.getToken(RSSParser.XML_VERSION, 0)

        def getRuleIndex(self):
            return RSSParser.RULE_xml_version

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitXml_version" ):
                return visitor.visitXml_version(self)
            else:
                return visitor.visitChildren(self)




    def xml_version(self):

        localctx = RSSParser.Xml_versionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_xml_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(RSSParser.ATT_VERSION)
            self.state = 48
            self.match(RSSParser.XML_VERSION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Xml_encodingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATT_ENCODING(self):
            return self.getToken(RSSParser.ATT_ENCODING, 0)

        def XML_ENCODING(self):
            return self.getToken(RSSParser.XML_ENCODING, 0)

        def getRuleIndex(self):
            return RSSParser.RULE_xml_encoding

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitXml_encoding" ):
                return visitor.visitXml_encoding(self)
            else:
                return visitor.visitChildren(self)




    def xml_encoding(self):

        localctx = RSSParser.Xml_encodingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_xml_encoding)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(RSSParser.ATT_ENCODING)
            self.state = 51
            self.match(RSSParser.XML_ENCODING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RssContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def O_RSS(self):
            return self.getToken(RSSParser.O_RSS, 0)

        def channel(self):
            return self.getTypedRuleContext(RSSParser.ChannelContext,0)


        def C_RSS(self):
            return self.getToken(RSSParser.C_RSS, 0)

        def getRuleIndex(self):
            return RSSParser.RULE_rss

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRss" ):
                return visitor.visitRss(self)
            else:
                return visitor.visitChildren(self)




    def rss(self):

        localctx = RSSParser.RssContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rss)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(RSSParser.O_RSS)
            self.state = 54
            self.channel()
            self.state = 55
            self.match(RSSParser.C_RSS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChannelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def O_CHANNEL(self):
            return self.getToken(RSSParser.O_CHANNEL, 0)

        def title(self):
            return self.getTypedRuleContext(RSSParser.TitleContext,0)


        def link(self):
            return self.getTypedRuleContext(RSSParser.LinkContext,0)


        def desc(self):
            return self.getTypedRuleContext(RSSParser.DescContext,0)


        def C_CHANNEL(self):
            return self.getToken(RSSParser.C_CHANNEL, 0)

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RSSParser.ItemContext)
            else:
                return self.getTypedRuleContext(RSSParser.ItemContext,i)


        def categ(self):
            return self.getTypedRuleContext(RSSParser.CategContext,0)


        def copyr(self):
            return self.getTypedRuleContext(RSSParser.CopyrContext,0)


        def img(self):
            return self.getTypedRuleContext(RSSParser.ImgContext,0)


        def getRuleIndex(self):
            return RSSParser.RULE_channel

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChannel" ):
                return visitor.visitChannel(self)
            else:
                return visitor.visitChildren(self)




    def channel(self):

        localctx = RSSParser.ChannelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_channel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(RSSParser.O_CHANNEL)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RSSParser.O_ITEM:
                self.state = 58
                self.item()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.title()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RSSParser.O_ITEM:
                self.state = 65
                self.item()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self.link()
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RSSParser.O_ITEM:
                self.state = 72
                self.item()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.desc()
            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 79
                    self.item() 
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RSSParser.O_CATEG:
                self.state = 85
                self.categ()


            self.state = 91
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 88
                    self.item() 
                self.state = 93
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RSSParser.O_COPYR:
                self.state = 94
                self.copyr()


            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 97
                    self.item() 
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RSSParser.O_IMG:
                self.state = 103
                self.img()


            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RSSParser.O_ITEM:
                self.state = 106
                self.item()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(RSSParser.C_CHANNEL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def O_IMG(self):
            return self.getToken(RSSParser.O_IMG, 0)

        def url(self):
            return self.getTypedRuleContext(RSSParser.UrlContext,0)


        def title(self):
            return self.getTypedRuleContext(RSSParser.TitleContext,0)


        def link(self):
            return self.getTypedRuleContext(RSSParser.LinkContext,0)


        def C_IMG(self):
            return self.getToken(RSSParser.C_IMG, 0)

        def height(self):
            return self.getTypedRuleContext(RSSParser.HeightContext,0)


        def width(self):
            return self.getTypedRuleContext(RSSParser.WidthContext,0)


        def getRuleIndex(self):
            return RSSParser.RULE_img

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImg" ):
                return visitor.visitImg(self)
            else:
                return visitor.visitChildren(self)




    def img(self):

        localctx = RSSParser.ImgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_img)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(RSSParser.O_IMG)
            self.state = 115
            self.url()
            self.state = 116
            self.title()
            self.state = 117
            self.link()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RSSParser.O_HEIGHT:
                self.state = 118
                self.height()


            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RSSParser.O_WIDTH:
                self.state = 121
                self.width()


            self.state = 124
            self.match(RSSParser.C_IMG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def O_ITEM(self):
            return self.getToken(RSSParser.O_ITEM, 0)

        def in_item(self):
            return self.getTypedRuleContext(RSSParser.In_itemContext,0)


        def C_ITEM(self):
            return self.getToken(RSSParser.C_ITEM, 0)

        def getRuleIndex(self):
            return RSSParser.RULE_item

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItem" ):
                return visitor.visitItem(self)
            else:
                return visitor.visitChildren(self)




    def item(self):

        localctx = RSSParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_item)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(RSSParser.O_ITEM)
            self.state = 127
            self.in_item()
            self.state = 128
            self.match(RSSParser.C_ITEM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class In_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def title(self):
            return self.getTypedRuleContext(RSSParser.TitleContext,0)


        def desc(self):
            return self.getTypedRuleContext(RSSParser.DescContext,0)


        def link(self):
            return self.getTypedRuleContext(RSSParser.LinkContext,0)


        def categ(self):
            return self.getTypedRuleContext(RSSParser.CategContext,0)


        def getRuleIndex(self):
            return RSSParser.RULE_in_item

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIn_item" ):
                return visitor.visitIn_item(self)
            else:
                return visitor.visitChildren(self)




    def in_item(self):

        localctx = RSSParser.In_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_in_item)
        self._la = 0 # Token type
        try:
            self.state = 282
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,37,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.title()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_DESC:
                    self.state = 131
                    self.desc()


                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_LINK:
                    self.state = 134
                    self.link()


                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_CATEG:
                    self.state = 137
                    self.categ()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.desc()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_TITLE:
                    self.state = 141
                    self.title()


                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_LINK:
                    self.state = 144
                    self.link()


                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_CATEG:
                    self.state = 147
                    self.categ()


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.link()
                self.state = 151
                self.title()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_DESC:
                    self.state = 152
                    self.desc()


                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_CATEG:
                    self.state = 155
                    self.categ()


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 158
                self.link()
                self.state = 159
                self.desc()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_TITLE:
                    self.state = 160
                    self.title()


                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_CATEG:
                    self.state = 163
                    self.categ()


                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 166
                self.categ()
                self.state = 167
                self.title()
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_DESC:
                    self.state = 168
                    self.desc()


                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_LINK:
                    self.state = 171
                    self.link()


                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 174
                self.categ()
                self.state = 175
                self.desc()
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_TITLE:
                    self.state = 176
                    self.title()


                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_LINK:
                    self.state = 179
                    self.link()


                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 182
                self.title()
                self.state = 183
                self.link()
                self.state = 184
                self.desc()
                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_CATEG:
                    self.state = 185
                    self.categ()


                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 188
                self.title()
                self.state = 189
                self.categ()
                self.state = 190
                self.desc()
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_LINK:
                    self.state = 191
                    self.link()


                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 194
                self.title()
                self.state = 195
                self.categ()
                self.state = 196
                self.link()
                self.state = 198
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_DESC:
                    self.state = 197
                    self.desc()


                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 200
                self.desc()
                self.state = 201
                self.link()
                self.state = 202
                self.title()
                self.state = 204
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_CATEG:
                    self.state = 203
                    self.categ()


                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 206
                self.desc()
                self.state = 207
                self.categ()
                self.state = 208
                self.title()
                self.state = 210
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_LINK:
                    self.state = 209
                    self.link()


                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 212
                self.desc()
                self.state = 213
                self.categ()
                self.state = 214
                self.link()
                self.state = 216
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_TITLE:
                    self.state = 215
                    self.title()


                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 218
                self.link()
                self.state = 219
                self.categ()
                self.state = 220
                self.title()
                self.state = 222
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_DESC:
                    self.state = 221
                    self.desc()


                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 224
                self.link()
                self.state = 225
                self.categ()
                self.state = 226
                self.desc()
                self.state = 228
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_TITLE:
                    self.state = 227
                    self.title()


                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 230
                self.categ()
                self.state = 231
                self.link()
                self.state = 232
                self.title()
                self.state = 234
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_DESC:
                    self.state = 233
                    self.desc()


                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 236
                self.categ()
                self.state = 237
                self.link()
                self.state = 238
                self.desc()
                self.state = 240
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==RSSParser.O_TITLE:
                    self.state = 239
                    self.title()


                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 242
                self.title()
                self.state = 243
                self.desc()
                self.state = 244
                self.categ()
                self.state = 245
                self.link()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 247
                self.title()
                self.state = 248
                self.link()
                self.state = 249
                self.categ()
                self.state = 250
                self.desc()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 252
                self.desc()
                self.state = 253
                self.title()
                self.state = 254
                self.categ()
                self.state = 255
                self.link()
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 257
                self.desc()
                self.state = 258
                self.link()
                self.state = 259
                self.categ()
                self.state = 260
                self.title()
                pass

            elif la_ == 21:
                self.enterOuterAlt(localctx, 21)
                self.state = 262
                self.link()
                self.state = 263
                self.title()
                self.state = 264
                self.categ()
                self.state = 265
                self.desc()
                pass

            elif la_ == 22:
                self.enterOuterAlt(localctx, 22)
                self.state = 267
                self.link()
                self.state = 268
                self.desc()
                self.state = 269
                self.categ()
                self.state = 270
                self.title()
                pass

            elif la_ == 23:
                self.enterOuterAlt(localctx, 23)
                self.state = 272
                self.categ()
                self.state = 273
                self.title()
                self.state = 274
                self.link()
                self.state = 275
                self.desc()
                pass

            elif la_ == 24:
                self.enterOuterAlt(localctx, 24)
                self.state = 277
                self.categ()
                self.state = 278
                self.desc()
                self.state = 279
                self.link()
                self.state = 280
                self.title()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TitleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def O_TITLE(self):
            return self.getToken(RSSParser.O_TITLE, 0)

        def txt(self):
            return self.getTypedRuleContext(RSSParser.TxtContext,0)


        def C_TITLE(self):
            return self.getToken(RSSParser.C_TITLE, 0)

        def getRuleIndex(self):
            return RSSParser.RULE_title

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTitle" ):
                return visitor.visitTitle(self)
            else:
                return visitor.visitChildren(self)




    def title(self):

        localctx = RSSParser.TitleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_title)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 284
            self.match(RSSParser.O_TITLE)
            self.state = 285
            self.txt()
            self.state = 286
            self.match(RSSParser.C_TITLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DescContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def O_DESC(self):
            return self.getToken(RSSParser.O_DESC, 0)

        def txt(self):
            return self.getTypedRuleContext(RSSParser.TxtContext,0)


        def C_DESC(self):
            return self.getToken(RSSParser.C_DESC, 0)

        def getRuleIndex(self):
            return RSSParser.RULE_desc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDesc" ):
                return visitor.visitDesc(self)
            else:
                return visitor.visitChildren(self)




    def desc(self):

        localctx = RSSParser.DescContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_desc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 288
            self.match(RSSParser.O_DESC)
            self.state = 289
            self.txt()
            self.state = 290
            self.match(RSSParser.C_DESC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def O_LINK(self):
            return self.getToken(RSSParser.O_LINK, 0)

        def URL(self):
            return self.getToken(RSSParser.URL, 0)

        def C_LINK(self):
            return self.getToken(RSSParser.C_LINK, 0)

        def getRuleIndex(self):
            return RSSParser.RULE_link

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLink" ):
                return visitor.visitLink(self)
            else:
                return visitor.visitChildren(self)




    def link(self):
